feat: update /newquery command, but not work deleting config